# risk-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: settings.cfg  settings.json
docker/: Dockerfile
src/: db_client.rs  events.rs  gcp_client.rs  logging.rs  main.rs  passwords.rs  platform.rs  settings.rs  utils.rs
src/events/: event_clients.rs  mod.rs  pub_sub.rs  web_hook.rs
src/platform/: account.rs  connectivity.rs  db_client.rs  engine.rs  external_process.rs  locker.rs  mktdata.rs  mktorder.rs  mktposition.rs  mod.rs  order_handler.rs  risk_sizing.rs  stream_handler.rs  technical_signals.rs  trading.rs
src/platform/data/: account.rs  assets.rs  db_client.rs  locker.rs  mktorder.rs  mktposition.rs  mod.rs
src/platform/data/locker/: atr_stop.rs  mod.rs  smart_trail.rs  trailing_stop.rs
src/platform/web_clients/: http_client.rs  mod.rs  websocket.rs
tools/: build.py
