[package]
name = "trading-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.26.2"
log = "0.4.17"
url = "2.3.1"
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
exitcode = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.142"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
futures = {version = "0.3", default-features = false}
serde_json = "1.0.96"

axum = "0.6.8"
chrono = "0.4"


google-cloud-default = { version = "0.2.0", features = ["pubsub"] }
google-cloud-pubsub = "0.14.1"
google-cloud-googleapis = { version = "0.7.0", features = ["pubsub"] }
google-cloud-gax = "0.13.0"
tokio-util = "0.7.8"
futures-util = "0.3.28"
