[package]
name = "trading-app"
version = "0.1.0"
edition = "2021"
author = "chris lawrence"
about = "smart risk management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.26.2"
log = "0.4.18"
url = "2.3.1"
clap = { version = "4.3.1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
exitcode = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.144"
num-decimal = {version = "0.2.5", default-features = false, features = ["num-v04", "serde"]}
futures = {version = "0.3", default-features = false}
serde_json = "1.0.96"

axum = "0.6.18"
chrono = "0.4"

google-cloud-default = { version = "0.3.0", features = ["pubsub"] }
google-cloud-pubsub = "0.15.0"
google-cloud-googleapis = { version = "0.9.0", features = ["pubsub"] }
google-cloud-gax = "0.14.2"
tokio-util = "0.7.8"
futures-util = "0.3.28"
tokio-postgres = "0.7.8"
gcloud-sdk = { version = "0.20.2", features = ["google-logging-v2", "google-cloud-secretmanager-v1", "google-pubsub-v1"] }
tonic = "0.9.2"
prost = "0.11.9"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics", ] }
anyhow = "1.0.71"
