[package]
name = "trading-app"
version = "0.2.0"
edition = "2021"
author = "chris lawrence"
about = "smart risk management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.27.2"
log = { version = "0.4.19", features = ["std"] }

url = "2.4.0"
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.30.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
exitcode = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
num-decimal = { version = "0.2.5", default-features = false, features = [
    "num-v04",
    "serde",
] }
futures = { version = "0.3", default-features = false }
axum = "0.6.20"
chrono = "0.4"
num = "0.4"
tower-http = { version = "0.4.4", features = ["cors"] }
google-cloud-default = { version = "0.3.0", features = ["pubsub"] }
google-cloud-pubsub = "0.15.0"
google-cloud-gax = "0.14.2"
tokio-util = "0.7.8"
futures-util = "0.3.28"
gcloud-sdk = { version = "0.20.6", features = [
    "google-logging-v2",
    "google-cloud-secretmanager-v1",
] }
tonic = "0.9.2"
prost = "0.12.1"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
tracing = "0.1.37"

uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1.0.72"
ta = "0.5.0"
http-endpoint = "0.5.0"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "runtime-tokio",
    "postgres",
    "sqlx-postgres",
    "bigdecimal",
    "uuid",
] }

nix = { version = "0.27.1", features = ["process"] }
